Esqueletos - oportunidades e eventos

--- a/EstagiA/app/src/main/AndroidManifest.xml
+++ b/EstagiA/app/src/main/AndroidManifest.xml
@@ -46,6 +46,16 @@
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
+        <activity android:name=".EventActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".OpportunityActivity">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
