--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 *.iml
-.gradle
+/.gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -7,3 +7,9 @@
 /build
 /captures
 .externalNativeBuild
+settings.gradle
+local.properties
+gradlew.bat
+gradlew
+gradle.properties
+build.gradle
