--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,8 @@
 *.iml
-/.gradle
+.gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
 /captures
-.externalNativeBuild
-settings.gradle
-local.properties
-gradlew.bat
-gradlew
-gradle.properties
-build.gradle
