Pega imagem da galeria e adiciona no perfil. Precisa adicionar no user.

--- a/EstagiA/app/src/main/AndroidManifest.xml
+++ b/EstagiA/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.leticia.estagia">
 
     <application
@@ -57,5 +58,6 @@
             </intent-filter>
         </activity>
     </application>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
 
 </manifest>
